--- a/design/style.css
+++ b/design/style.css
@@ -75,3 +75,35 @@
 .upload-gallery-container {
     display: flex;
 }
+
+.upload-gallery-container input[type=text] {
+    width: 150px;
+}
+
+
+.file-upload {
+    position: relative;
+    display: inline-block;
+}
+
+.file-upload__label {
+    display: block;
+    padding: 1em 2em;
+    color: #fff;
+    background: #1ab394;
+    border-radius: .4em;
+    transition: background .3s;
+
+}
+
+.file-upload__input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1;
+    width:0;
+    height: 100%;
+    opacity: 0;
+}
