--- a/www/angular-app/src/app/auth/auth.component.html
+++ b/www/angular-app/src/app/auth/auth.component.html
@@ -1,14 +1,21 @@
-<div class="gray-bg">
-    <div class="middle-box text-center loginscreen animated fadeInDown">
-        <div>
-            <div>
-
-                <h1 class="logo-name">IN+</h1>
-
+<div class="auth">
+    <div class="auth-container">
+        <div class="card">
+            <header class="auth-header">
+                <h1 class="auth-title">
+                    <div class="logo">
+                        <span class="l l1"></span>
+                        <span class="l l2"></span>
+                        <span class="l l3"></span>
+                        <span class="l l4"></span>
+                        <span class="l l5"></span>
+                    </div>
+                    Photo System
+                </h1>
+            </header>
+            <div class="auth-content">
+                <app-login></app-login>
             </div>
-
-            <p>Login in. To see it in action.</p>
-            <app-login></app-login>
         </div>
     </div>
 </div>
