--- a/www/angular-app/src/app/auth/login/login.component.html
+++ b/www/angular-app/src/app/auth/login/login.component.html
@@ -1,11 +1,50 @@
-<form class="m-t" role="form" action="index.html">
-  <div class="form-group">
-    <input type="email" class="form-control" placeholder="Username" required="">
+<p class="text-xs-center">Sign in to work</p>
+
+<form
+      [formGroup]="form"
+      (ngSubmit)="onSubmit()"
+>
+  <div class="form-group" [ngClass]="{'has-error' : form.get('email').invalid && form.get('email').touched}">
+    <label for="email">Email</label>
+    <input
+            type="text"
+            class="form-control underlined"
+            id="email"
+            placeholder="Enter Email"
+            formControlName="email"
+    >
+
+    <span
+            class="form-help-text"
+            *ngIf="form.get('email').invalid && form.get('email').touched"
+    >
+        <span *ngIf="form.get('email')['errors']['required']">Email не может быть пустым</span>
+        <span *ngIf="form.get('email')['errors']['email']">Введите корректный email</span>
+    </span>
+  </div>
+  <div class="form-group" [ngClass]="{'has-error' : form.get('password').invalid && form.get('password').touched}">
+
+    <label for="password">Password</label>
+    <input
+            type="password"
+            class="form-control underlined"
+            id="password"
+            placeholder="Enter Password"
+            formControlName="password"
+    >
+    <span
+            class="form-help-text"
+            *ngIf="form.get('password').invalid && form.get('password').touched"
+    >
+        <span *ngIf="form.get('password')['errors']['required']">Email не может быть пустым</span>
+        <span *ngIf="form.get('password')['errors']['minlength']">
+          Пароль должен быть больше
+          {{ form.get('password')['errors']['minlength']['requiredLength']}}
+          символов. Сейчас {{ form.get('password')['errors']['minlength']['actualLength']}}.
+        </span>
+    </span>
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Password" required="">
+    <button type="submit" [disabled]="form.invalid"  class="btn btn-block btn-primary">Login</button>
   </div>
-  <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
-
-
 </form>
